# Arayehsaz

./: .clang-format  CMakeLists.txt  CREDITS  README.md  ROADMAP.md  arayehsaz.pc.in
document/: CMakeLists.txt  Doxyfile.in
document/asset/html/: footer.html  header.html
document/asset/js/: menu.js
include/: CMakeLists.txt  algorithms.h  arayeh.h  arayehInternal.h  arayehTypeManager.h  configurations.h  fatal.h  functions.h  methods.h  typeManager.h  types.h
package/: CMakeLists.txt  arayehsazConfig.cmake
source/: CMakeLists.txt  algorithms.c  arayeh.c  arayeh.h  arayehInternal.c  arayehInternal.h  arayehTypeManager.c  arayehTypeManager.h  arrays1d.c  arrays1d.h  arraysInternals1d.c  arraysInternals1d.h  configurations.h  functions.c  methods.c  typeManager.c  types.c
test/: CMakeLists.txt  unitTestAdd.c  unitTestExtend.c  unitTestFill.c  unitTestInitFree.c  unitTestInsert.c
test/integration tests/: CMakeLists.txt
test/performance/: CMakeLists.txt  perfTest_001_CompactMap.c  perfTest_002_NonCompactMap.c
test/performance/cmake/: compact_map.cmake
test/unit/: CMakeLists.txt  unitTest_001_InitFree.c  unitTest_002_ResizeMemory.c  unitTest_003_Extend.c  unitTest_006_Duplicate.c  unitTest_007_Add.c  unitTest_008_Insert.c  unitTest_009_Fill.c  unitTest_010_MergeArayeh.c  unitTest_011_MergeArray.c  unitTest_012_Get.c
test/unit tests/: CMakeLists.txt  unitTestAdd.c  unitTestExtend.c  unitTestFill.c  unitTestInitFree.c  unitTestInsert.c  unitTest_001_InitFree.c  unitTest_002_ResizeMemory.c  unitTest_003_Extend.c  unitTest_006_Duplicate.c  unitTest_007_Add.c  unitTest_008_Insert.c  unitTest_009_Fill.c  unitTest_010_MergeArayeh.c  unitTest_011_MergeArray.c  unitTest_012_Get.c  unitTest_1_InitFree.c  unitTest_2_Extend.c  unitTest_2_ResizeMemory.c  unitTest_3_Add.c  unitTest_3_Extend.c  unitTest_4_Add.c  unitTest_4_Insert.c  unitTest_5_Fill.c  unitTest_5_Insert.c  unitTest_6_Fill.c  unitTest_7_mergeArray.c  unitTest_8_Get.c
test/unity test framework/: CMakeLists.txt
